--- a/de.guite.modulestudio.gmf.mspers.nl1.de/build.properties
+++ b/de.guite.modulestudio.gmf.mspers.nl1.de/build.properties
@@ -1,1 +1,5 @@
-bin.includes = META-INF/
+bin.includes = META-INF/,\
+               OSGI-INF/,\
+               plugin_de.properties,\
+               messages_de.properties
+
