--- a/de.guite.modulestudio.locales.feature/build.properties
+++ b/de.guite.modulestudio.locales.feature/build.properties
@@ -1,2 +1,3 @@
 bin.includes = feature.xml,\
-               OSGI-INF/l10n/bundle.properties
+               feature.properties,\
+               most_update_120.png
