started huge refactoring of DSL

--- a/de.guite.modulestudio.gmf.model.nl1.de/.project
+++ b/de.guite.modulestudio.gmf.model.nl1.de/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>de.guite.modulestudio.gmf.mspers.nl1.de</name>
+	<name>de.guite.modulestudio.gmf.model.nl1.de</name>
 	<comment></comment>
 	<projects>
 	</projects>
