--- a/de.guite.modulestudio.locales.feature/feature.properties
+++ b/de.guite.modulestudio.locales.feature/feature.properties
@@ -13,12 +13,141 @@ copyrightUrl=copyright.html
 copyright = Copyright (c) 2007-2010 Axel Guckelsberger
 
 # "licenseURL" property - URL of the "Feature License"
-# do not translate value - just change to point to a locale-specific HTML page
 licenseURL=license.html
 
 # "license" property - text of the "Feature Update License"
 # should be plain text version of license agreement pointed to be "licenseURL"
-license=
+license=\
+Software Lizenzvereinbarung\n\
+für ModuleStudio Community Edition Version 0.5\n\
+\n\
+Diese Vereinbarung wird zwischen Guckelsberger Informationstechnik, Axel Guckelsberger (nachfolgend „Lizenzgeber“ genannt) und dem jeweiligen Verwender der Software (nachfolgend „Lizenznehmer“ genannt) geschlossen. Die Softwarelizenz bezieht sich auf die Version 0.5 der Community Edition von ModuleStudio (nachfolgend „Software“ genannt). Funktionsumfang und Informationen zur Benutzung der Software werden auf der Homepage (http://modulestudio.de) vorgestellt.\n\
+\n\
+§ 1 Vertragliche Grundlagen\n\
+(1) Der Lizenznehmer darf die Software nur herunterladen, installieren oder benutzen, sofern er mit den nachfolgenden Lizenzbestimmungen einverstanden ist und diese anerkennt. Die Benutzung und Weitergabe der Software darf ausschließlich zu diesen Bestimmungen erfolgen.\n\
+(2) Die ModuleStudio Community Edition Version 0.5 wird kostenlos zur Verfügung gestellt (Freeware). Allerdings verbleiben sämtliche Rechte an der Software und dem Quellcode bei dem Lizenzgeber und den im Folgenden genannten jeweiligen Eigentümern.\n\
+(3) Teile der Software basieren auf Software von Dritten (Eclipse und Apache), für die gesonderte Lizenzbedingungen zu beachten sind. Der Lizenznehmer verpflichtet sich die Software erst dann zu installieren, wenn er sich auch mit diesen untenstehenden Lizenzvereinbarungen einverstanden erklärt. Welche der jeweiligen Lizenzen auf die einzelnen enthaltenen Komponenten dieser Drittanbieter zutreffen, ist innerhalb der Software unter Hauptmenü „Hilfe“ → About ModuleStudio CE → Installation Details → Eclipse Logo → License / Legal Info zu finden.\n\
+\n\
+§ 2 Inhalt der Leistungen\n\
+(1) Die Software wird dem Lizenznehmer in ausführbarer Form bereitgestellt. Der Quellcode der Software wird nicht herausgegeben. Allerdings kann auf Anfrage an die E-Mail-Adresse info@modulestudio.de der Quellcode der verwendeten Eclipse- und Apache-Komponenten zur Verfügung gestellt werden.\n\
+(2) Der Lizenznehmer erhält ein einfaches (nicht ausschließliches), zeitlich unbegrenztes Nutzungsrecht. Das Urheberrecht sowie alle Eigentumsrechte an der Software und dem Quellcode bleiben bei dem Lizenzgeber bzw. den jeweiligen Eigentümern.\n\
+(3) Die von dem Lizenznehmer mit der Software erzeugten Anwendungen (Module) dürfen (auch in kommerzielle) Projekte eingebaut und als Eigenleistung vermarktet werden. Dabei geht jegliche Haftung auf den Lizenznehmer über. Der Einsatz der generierten Module in kritischen Projekten, die ein Personenschadenrisiko direkt zur Folge haben können (Kfz-Produktion und Konstruktion, Systeme für den Einsatz in Flughäfen, Straßentechnik, Schienenfahrzeuge, Raumfahrt, Medizin- und Labortechnik, etc.) ist ausdrücklich verboten. Ein Einstellen der Module oder Teilen davon als Showcase oder einen Bericht im Forum auf der Homepage (http://modulestudio.de/Forum/) ist sehr erwünscht.\n\
+(4) Der Lizenznehmer ist nicht berechtigt die Software ganz oder in Teilen zu verkaufen, zu verleihen, zu vermieten oder Unterlizenzen zu vergeben. Die Software darf ausschließlich kostenlos, unverändert und in Verbindung mit dieser Lizenz und allen Urheberrechtshinweisen weitergegeben werden. \n\
+(5) Jegliche Form von Änderungen an der Software (modifizieren, verändern, erweitern, manipulieren, etc.) sind verboten und verletzen das Urheberrecht des Lizenzgebers. Die Rückübersetzung der überlassenen Software in andere Codeformen (Dekompilierung) sowie sonstige Arten der Rückerschließung der verschiedenen Herstellungsstufen der Software (Reverse-Engineering) sind unzulässig. Der Lizenznehmer hat es in jedem Fall zu unterlassen, Urheberrechts- und Schutzrechtsvermerke zu entfernen.\n\
+(6) Sofern dem Lizenznehmer auf Grund gesetzlicher Vorschriften dennoch eine Dekompilierung zusteht, um die erforderlichen Informationen zur Herstellung der Interoperabilität mit anderen Programmen zu erhalten, hat er den Lizenzgeber im Voraus über Art und Umfang der beabsichtigten Dekompilierung zu informieren und die dadurch erlangten Informationen vertraulich zu behandeln. Vor der Dekompilierung ist es dem Lizenzgeber zu ermöglichen, dem Lizenznehmer die benötigten Informationen innerhalb einer angemessenen Frist zu überlassen.\n\
+(7) Sollte der Lizenznehmer gegen eine oder alle Bedingungen dieser Vereinbarung verstoßen, erlischt automatisch und ohne gesonderte Kündigung das Recht zur Benutzung der Software. \n\
+\n\
+§ 3 Sicherung der Leistungen\n\
+(1) Die Software wurde unter Berücksichtigung aktueller Standards und anerkannter Regeln der Softwaretechnik sorgfältig erstellt, getestet sowie in diversen Kundenprojekten erfolgreich eingesetzt und wurde eingehend auf Viren untersucht. Da aber Software nie fehlerfrei sein kann, wird die Software ohne jede Garantie angeboten.\n\
+(2) Bei der vorliegenden Version der Software handelt es sich um eine Entwicklungsversion (Versionsnummer kleiner als 1.0), für deren Stabilität und Lauffähigkeit auf einem bestimmten System keine Garantie übernommen werden kann. Die Software ist vor dem praktischen Einsatz auf einem System, das keine sensiblen Daten enthält, ausgiebig zu testen. Weiterhin sollten regelmäßig Ergebnisse gespeichert und die Anwendung bei komplexer Nutzung und größeren Modulen zwischendurch neu gestartet werden. Der Lizenzgeber haftet nicht für Schäden, die durch eine unzureichende Datensicherung oder unsachgemäße Bedienung entstehen.\n\
+(3) Es kann weder gewährleistet werden, dass die Funktionen der Software den Anforderungen des Lizenznehmers entsprechen, noch dass die Software fehlerfrei ist und unterbrechungsfrei funktioniert. Die Eignung der Software für einen bestimmten Anwendungsfall oder eine bestimmte Konfiguration wird nicht garantiert. Ein Anspruch auf Behebung von Fehlern besteht nicht.\n\
+(4) Der Lizenzgeber übernimmt keine Haftung für Fehler in der Software sowie Fehler und Schäden, die sich aus der Benutzung oder Unfähigkeit zur Benutzung der Software ergeben, es sei denn, diese beruhen auf einem grob fahrlässigen oder vorsätzlichen Handeln des Lizenzgebers oder seiner Mitarbeiter. Dies schließt den Verlust von Geschäftsgewinnen, die Unterbrechung der geschäftlichen Abläufe, den Verlust von Daten sowie alle übrigen materiellen und ideellen Verluste und deren Folgeschäden ein.\n\
+\n\
+§ 4 Allgemeine Bestimmungen\n\
+(1) Die vorliegende Vereinbarung unterliegt dem Recht der Bundesrepublik Deutschland. Erfüllungsort ist Weiler bei Bingen. Gerichtsstand für alle Streitigkeiten aus diesem Vertrag und in Verbindung mit der Software ist Mainz. \n\
+(2) Sollten einzelne Bestimmungen dieses Vertrages ganz oder teilweise unwirksam sein oder die Wirksamkeit durch einen später eintretenden Umstand verlieren, bleibt die Wirksamkeit des Vertrages im Übrigen unberührt. Ungültige Bestimmungen sind durch solche zu ersetzen, die dem wirtschaftlichen Zweck am nächsten kommen. Änderungen und/oder Ergänzungen der Vereinbarung bedürfen der Schriftform. Die Schriftform ist auch durch telekommunikative Übermittlung erfüllbar.\n\
+(3) Die offizielle Sprache dieser Vereinbarung ist deutsch. Eine englische Fassung wird als Übersetzungshilfe angefügt. Diese Übersetzung ist jedoch kein rechtskräftiger Ersatz für die maßgebliche deutschsprachige Originalversion.\n\
+\n\
+Copyright © 2010 Axel Guckelsberger\n\
+Alle Rechte vorbehalten.\n\
+Das ModuleStudio Logo ist eine eingetragene Marke von Axel Guckelsberger.\n\
+\n\
+\n\
+\n\
+-------------------------------------------------\n\
+Software Lizenzen und rechtliche Hinweise Dritter\n\
+-------------------------------------------------\n\
+\n\
+\n\
+Eclipse Foundation, Inc.\n\
+\n\
+Eclipse and Built on Eclipse are trademarks of Eclipse Foundation, Inc.\n\
+The Software contains code provided by the Eclipse Foundation, Inc. This code is made available under the terms of the Eclipse Public License v1.0 which accompanies this code, and is available at http://www.eclipse.org/legal/epl-v10.html.\n\
+\n\
+\n\
+-------------------------------------------------\n\
+\n\
+\n\
+Apache Software Foundation\n\
+\n\
+Apache is a trademark of The Apache Software Foundation.\n\
+The Software contains Common project code that is copyright by The Apache Software Foundation.\n\
+Copyright 2010 Apache Software Foundation\n\
+Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\
+http://www.apache.org/licenses/LICENSE-2.0 \n\
+Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n\
+See the License for the specific language governing permissions and limitations under the License.\n\
+\n\
+\n\
+\n\
+\n\
+\n\
+\n\
+\n\
+\n\
+----------------------------------------------\n\
+English Translation (no legal valid \n\
+replacement for the German original)\n\
+----------------------------------------------\n\
+\n\
+\n\
+Software Licencing Agreement\n\
+for ModuleStudio Community Edition Version 0.5\n\
+\n\
+This agreement is concluded between Guckelsberger Informationstechnik, Axel Guckelsberger (hereinafter referred to as the "Licencor") and the respective user of the software (hereinafter referred to as "Licencee"). The software licence relates to Version 0.5 of the Community Edition of ModuleStudio (hereinafter referred to as the "Software"). A description of the functional scope and information concerning the use of the software is provided on the home page (http://modulestudio.de).\n\
+\n\
+Clause 1   Basis for the agreement\n\
+(1) The licencee may only download, install or use the software when he agrees to the following licencing conditions and accepts them. The software may only be used or forwarded according to these conditions.\n\
+(2) The ModuleStudio Community Edition Version 0.5 is provided free of charge (Freeware). However, all rights concerning the software and the source code remain with the licencor and the respective owners as stipulated below.\n\
+(3) Parts of this software are based on the software of third parties (Eclipse and Apache), for which separate licencing conditions must be considered. The licencee agrees to install the software only when he also accepts these licencing agreements mentioned below. The software contains information concerning the licences for the third-party components used in the software at main menu Help → About ModuleStudio CE → Installation Details → Eclipse Logo → Licence / Legal Info.\n\
+\n\
+Clause 2   Services\n\
+(1) The software is provided to the licencee in executable form. The source code of the software is not provided. However, the source code for the Eclipse- and Apache-components used can be provided on request (info@modulestudio.de).\n\
+(2) The licencee receives a simple (non-exclusive) and non-time-limited user right. Copyright as well as all property rights yo the software and the source code remain with the licencor or the respective owners.\n\
+(3) The applications created by the licencee with the software (modules) may be installed in projects (including commercial projects) and sold as own products. All liability is transferred to the licencee. Any use of the modules generated in critical projects that may lead to injuries or death (motor vehicle production and constructions, systems for use at airports, road technology, rail-based vehicles, space flight, medical and laboratory technology, etc.) is explicitly prohibited. The use of modules or parts thereof as showcases or reports in the forum on the product page (http://modulestudio.de/en/Forum/) is very welcome.\n\
+(4) The licencee is not entitled to sell, lend or lease all or part of the software or to grant sub-licences. The software may only be forwarded free of charge, unchanged and in connection with this licence and all copyright information.\n\
+(5) Any changes to the software (modifications, alterations, extensions, manipulation, etc,) are prohibited and violate the copyright of the licencor. Decompilation of the software to other code forms as well as other ways of reverse engineering of the various production levels of the software are not permitted. The licencee may under no circumstances remove copyright and property right notifications.\n\
+(6) When the licencee is legally entitled to perform a recompilation in order to obtain the information required to establish interoperability with other programs, the licencee must inform the licencor in advance about the type and scope of the decompilation intended and must treat the information obtained as confidential. Before decompilation, the licencor must be provided with the opportunity to forward the information required to the licencee within an appropriate time span.\n\
+(7) The right to use the software automatically expires without a special notice period when the licencee violates one or all conditions in this agreement.\n\
+\n\
+Clause 3   Securing the services\n\
+(1) The software was carefully compiled and tested according to current standards and acknowledged rules of software engineering, successfully used in various customer projects and thoroughly checked for viruses. However, as software can never be free of faults, this software is offered without guarantee.\n\
+(2) The current software version is a development version (version number smaller than 1.0) and no guarantee can be provided for its stability and usability on a specific system. The software should be thoroughly tested on a system that does not contain sensitive data. The results should be stored at regular intervals and the system should be restarted from time to time when complex applications and large modules are used. The licencor is not liable for damage caused by insufficient data backup or inappropriate operation.\n\
+(3) It cannot be guaranteed that the functions of the software comply with the requirements of the licencor or that the software is free of faults and works without interruptions. The suitability of the software for a specific application or a specific configuration is not guaranteed. There is no right to have faults removed.\n\
+(4) The licencor is not liable for faults in the software or faults and damage resulting from the use of the software or the inability to use the software, except when these result from grossly negligent or deliberate action on the part of the licencor or one of his staff members. This includes the loss of business profit, the interruption of business processes, the loss of data as well as all other material or non-material losses and consecutive damage.\n\
+\n\
+Clause 4   General regulations\n\
+(1) The current agreement is subject to the laws of the Federal Republic of Germany. The place of fulfilment is Weiler near Bingen. The place of jurisdiction for all disputes resulting from this contract and in connection with this software is Mainz.\n\
+(2) The validity of the remaining contract will not be affected when individual clauses of this contract are found to be partially or fully invalid or become invalid due to later developments. Invalid clauses are to be replaced with valid clauses that are as close as possible to the economic purpose of the invalid clause. Changes and/or supplements of the agreement must be provided in writing. The requirement for written form can also be fulfilled by transmission though telecommunication systems.\n\
+(3) The official language of this agreement is German. The English translation is intended to aid comprehension, but is not a legally valid replacement for the German original, which takes precedence.\n\
+\n\
+Copyright © 2010 Axel Guckelsberger\n\
+All rights reserved.\n\
+The ModuleStudio Logo is a registered trademark of Axel Guckelsberger.\n\
+\n\
+\n\
+\n\
+\n\
+-----------------------------------------------\n\
+Third Party Software Licences and Legal Notices\n\
+-----------------------------------------------\n\
+\n\
+Eclipse Foundation, Inc.\n\
+\n\
+Eclipse and Built on Eclipse are trademarks of Eclipse Foundation, Inc.\n\
+The Software contains code provided by the Eclipse Foundation, Inc. This code is made available under the terms of the Eclipse Public License v1.0 which accompanies this code, and is available at http://www.eclipse.org/legal/epl-v10.html.\n\
+\n\
+-----------------------------------------------\n\
+\n\
+Apache Software Foundation\n\
+\n\
+Apache is a trademark of The Apache Software Foundation.\n\
+The Software contains Common project code that is copyright by The Apache Software Foundation.\n\
+Copyright 2010 Apache Software Foundation\n\
+Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\
+http://www.apache.org/licenses/LICENSE-2.0 \n\
+Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n\
+See the License for the specific language governing permissions and limitations under the License.\n\
 
 # Label for the update site
 mostUpdateSiteName=ModuleStudio (MOST) Updates
