--- a/production/de.guite.modulestudio.mostdsl.nl1.de/build.properties
+++ b/production/de.guite.modulestudio.mostdsl.nl1.de/build.properties
@@ -1,3 +1,4 @@
 bin.includes = META-INF/,\
                OSGI-INF/,\
-               plugin_de.properties
+               plugin_de.properties,\
+               de/
