added missing build property

--- a/production/de.guite.modulestudio.branding.nl1.de/build.properties
+++ b/production/de.guite.modulestudio.branding.nl1.de/build.properties
@@ -1,2 +1,4 @@
 bin.includes = META-INF/,\
-               OSGI-INF/
+               OSGI-INF/,\
+               about_de.properties,\
+               nl/
