--- a/production/de.guite.modulestudio.locales.feature/build.properties
+++ b/production/de.guite.modulestudio.locales.feature/build.properties
@@ -1,3 +1,4 @@
 bin.includes = feature.xml,\
                feature.properties,\
-               most_update_120.png
+               most_update_120.png,\
+               feature_de.properties
