readding license information to feature as the central license mechanism causes build problems

--- a/production/de.guite.modulestudio.locales.feature/build.properties
+++ b/production/de.guite.modulestudio.locales.feature/build.properties
@@ -1,4 +1,5 @@
 bin.includes = feature.xml,\
                feature.properties,\
                most_update_120.png,\
-               feature_de.properties
+               feature_de.properties,\
+               license.html
