externalised some editor expressions

--- a/bundles/pom.xml
+++ b/bundles/pom.xml
@@ -20,6 +20,7 @@
         <module>de.guite.modulestudio.mostdsl.nl1.de</module>
         <module>de.guite.modulestudio.mostdsl.ui.importer.nl1.de</module>
         <module>de.guite.modulestudio.mostdsl.ui.nl1.de</module>
+        <module>de.guite.modulestudio.sirius.design.nl1.de</module>
         <module>de.guite.modulestudio.ui.nl1.de</module>
         <module>de.guite.modulestudio.ui.preferences.nl1.de</module>
         <module>de.guite.modulestudio.update.nl1.de</module>
