--- a/features/de.guite.modulestudio.locales.feature/feature.properties
+++ b/features/de.guite.modulestudio.locales.feature/feature.properties
@@ -15,13 +15,13 @@ licenseUrl=license.html
 # should be plain text version of license agreement pointed to be "licenseUrl"
 license=\
 Software Lizenzvereinbarung\n\
-für ModuleStudio Version 0.7.5\n\
+für ModuleStudio Version 1.0.0\n\
 \n\
-Diese Vereinbarung wird zwischen Guckelsberger Informationstechnik, Axel Guckelsberger (nachfolgend "Lizenzgeber" genannt) und dem jeweiligen Verwender der Software (nachfolgend "Lizenznehmer" genannt) geschlossen. Die Softwarelizenz bezieht sich auf die Version 0.7.5 von ModuleStudio (nachfolgend "Software" genannt). Funktionsumfang und Informationen zur Benutzung der Software werden auf der Homepage (https://modulestudio.de) vorgestellt.\n\
+Diese Vereinbarung wird zwischen Guckelsberger Informationstechnik, Axel Guckelsberger (nachfolgend "Lizenzgeber" genannt) und dem jeweiligen Verwender der Software (nachfolgend "Lizenznehmer" genannt) geschlossen. Die Softwarelizenz bezieht sich auf die Version 1.0.0 von ModuleStudio (nachfolgend "Software" genannt). Funktionsumfang und Informationen zur Benutzung der Software werden auf der Homepage (https://modulestudio.de) vorgestellt.\n\
 \n\
  § 1 Vertragliche Grundlagen\n\
 (1) Der Lizenznehmer darf die Software nur herunterladen, installieren oder benutzen, sofern er mit den nachfolgenden Lizenzbestimmungen einverstanden ist und diese anerkennt. Die Benutzung und Weitergabe der Software darf ausschließlich zu diesen Bestimmungen erfolgen.\n\
-(2) Die ModuleStudio Version 0.7.5 wird kostenlos zur Verfügung gestellt (Freeware). Allerdings verbleiben sämtliche Rechte an der Software und dem Quellcode bei dem Lizenzgeber und den im Folgenden genannten jeweiligen Eigentümern.\n\
+(2) Die ModuleStudio Version 1.0.0 wird kostenlos zur Verfügung gestellt (Freeware). Allerdings verbleiben sämtliche Rechte an der Software und dem Quellcode bei dem Lizenzgeber und den im Folgenden genannten jeweiligen Eigentümern.\n\
 (3) Teile der Software basieren auf Software von Dritten (Eclipse und Apache), für die gesonderte Lizenzbedingungen zu beachten sind. Der Lizenznehmer verpflichtet sich die Software erst dann zu installieren, wenn er sich auch mit diesen untenstehenden Lizenzvereinbarungen einverstanden erklärt. Welche der jeweiligen Lizenzen auf die einzelnen enthaltenen Komponenten dieser Drittanbieter zutreffen, ist innerhalb der Software unter Hauptmenü "Hilfe" > About ModuleStudio > Installation Details > Eclipse Logo > License / Legal Info zu finden.\n\
 \n\
  § 2 Inhalt der Leistungen\n\
@@ -35,7 +35,7 @@ Diese Vereinbarung wird zwischen Guckelsberger Informationstechnik, Axel Guckels
 \n\
  § 3 Sicherung der Leistungen\n\
 (1) Die Software wurde unter Berücksichtigung aktueller Standards und anerkannter Regeln der Softwaretechnik sorgfältig erstellt, getestet sowie in diversen Kundenprojekten erfolgreich eingesetzt und wurde eingehend auf Viren untersucht. Da aber Software nie fehlerfrei sein kann, wird die Software ohne jede Garantie angeboten.\n\
-(2) Bei der vorliegenden Version der Software handelt es sich um eine Entwicklungsversion (Versionsnummer kleiner als 1.0), für deren Stabilität und Lauffähigkeit auf einem bestimmten System keine Garantie übernommen werden kann. Die Software ist vor dem praktischen Einsatz auf einem System, das keine sensiblen Daten enthält, ausgiebig zu testen. Weiterhin sollten regelmäßig Ergebnisse gespeichert und die Anwendung bei komplexer Nutzung und größeren Modulen zwischendurch neu gestartet werden. Der Lizenzgeber haftet nicht für Schäden, die durch eine unzureichende Datensicherung oder unsachgemäße Bedienung entstehen.\n\
+(2) Es wird keine Garantie für die Stabilität und Lauffähigkeit der vorliegenden Softwareversion auf einem bestimmten System übernommen. Die Software ist vor dem praktischen Einsatz auf einem System, das keine sensiblen Daten enthält, ausgiebig zu testen. Weiterhin sollten regelmäßig Ergebnisse gespeichert und die Anwendung bei komplexer Nutzung und größeren Modulen zwischendurch neu gestartet werden. Der Lizenzgeber haftet nicht für Schäden, die durch eine unzureichende Datensicherung oder unsachgemäße Bedienung entstehen.\n\
 (3) Es kann weder gewährleistet werden, dass die Funktionen der Software den Anforderungen des Lizenznehmers entsprechen, noch dass die Software fehlerfrei ist und unterbrechungsfrei funktioniert. Die Eignung der Software für einen bestimmten Anwendungsfall oder eine bestimmte Konfiguration wird nicht garantiert. Ein Anspruch auf Behebung von Fehlern besteht nicht.\n\
 (4) Der Lizenzgeber übernimmt keine Haftung für Fehler in der Software sowie Fehler und Schäden, die sich aus der Benutzung oder Unfähigkeit zur Benutzung der Software ergeben, es sei denn, diese beruhen auf einem grob fahrlässigen oder vorsätzlichen Handeln des Lizenzgebers oder seiner Mitarbeiter. Dies schließt den Verlust von Geschäftsgewinnen, die Unterbrechung der geschäftlichen Abläufe, den Verlust von Daten sowie alle übrigen materiellen und ideellen Verluste und deren Folgeschäden ein.\n\
 \n\
@@ -99,13 +99,13 @@ replacement for the German original)\n\
 \n\
 \n\
 Software Licencing Agreement\n\
-for ModuleStudio Version 0.7.5\n\
+for ModuleStudio Version 1.0.0\n\
 \n\
-This agreement is concluded between Guckelsberger Informationstechnik, Axel Guckelsberger (hereinafter referred to as the "Licencor") and the respective user of the software (hereinafter referred to as "Licencee"). The software licence relates to Version 0.7.5 of ModuleStudio (hereinafter referred to as the "Software"). A description of the functional scope and information concerning the use of the software is provided on the home page (https://modulestudio.de).\n\
+This agreement is concluded between Guckelsberger Informationstechnik, Axel Guckelsberger (hereinafter referred to as the "Licencor") and the respective user of the software (hereinafter referred to as "Licencee"). The software licence relates to Version 1.0.0 of ModuleStudio (hereinafter referred to as the "Software"). A description of the functional scope and information concerning the use of the software is provided on the home page (https://modulestudio.de).\n\
 \n\
 Clause 1   Basis for the agreement\n\
 (1) The licencee may only download, install or use the software when he agrees to the following licencing conditions and accepts them. The software may only be used or forwarded according to these conditions.\n\
-(2) The ModuleStudio Version 0.7.5 is provided free of charge (Freeware). However, all rights concerning the software and the source code remain with the licencor and the respective owners as stipulated below.\n\
+(2) The ModuleStudio Version 1.0.0 is provided free of charge (Freeware). However, all rights concerning the software and the source code remain with the licencor and the respective owners as stipulated below.\n\
 (3) Parts of this software are based on the software of third parties (Eclipse and Apache), for which separate licencing conditions must be considered. The licencee agrees to install the software only when he also accepts these licencing agreements mentioned below. The software contains information concerning the licences for the third-party components used in the software at main menu Help > About ModuleStudio > Installation Details > Eclipse Logo > Licence / Legal Info.\n\
 \n\
 Clause 2   Services\n\
@@ -119,7 +119,7 @@ Clause 2   Services\n\
 \n\
 Clause 3   Securing the services\n\
 (1) The software was carefully compiled and tested according to current standards and acknowledged rules of software engineering, successfully used in various customer projects and thoroughly checked for viruses. However, as software can never be free of faults, this software is offered without guarantee.\n\
-(2) The current software version is a development version (version number smaller than 1.0) and no guarantee can be provided for its stability and usability on a specific system. The software should be thoroughly tested on a system that does not contain sensitive data. The results should be stored at regular intervals and the system should be restarted from time to time when complex applications and large modules are used. The licencor is not liable for damage caused by insufficient data backup or inappropriate operation.\n\
+(2) No guarantee is provided for the stability and usability of the current software version on a specific system. The software should be thoroughly tested on a system that does not contain sensitive data. The results should be stored at regular intervals and the system should be restarted from time to time when complex applications and large modules are used. The licencor is not liable for damage caused by insufficient data backup or inappropriate operation.\n\
 (3) It cannot be guaranteed that the functions of the software comply with the requirements of the licencor or that the software is free of faults and works without interruptions. The suitability of the software for a specific application or a specific configuration is not guaranteed. There is no right to have faults removed.\n\
 (4) The licencor is not liable for faults in the software or faults and damage resulting from the use of the software or the inability to use the software, except when these result from grossly negligent or deliberate action on the part of the licencor or one of his staff members. This includes the loss of business profit, the interruption of business processes, the loss of data as well as all other material or non-material losses and consecutive damage.\n\
 \n\
