--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,12 @@
         <groupId>de.guite.modulestudio</groupId>
         <artifactId>de.guite.modulestudio.configuration</artifactId>
         <version>1.4.0-SNAPSHOT</version>
-        <relativePath>../MostProduct/releng/de.guite.modulestudio.configuration/pom.xml</relativePath>
+        <relativePath>MostProduct/releng/de.guite.modulestudio.configuration/pom.xml</relativePath>
     </parent>
 
     <modules>
-        <module>../MostProduct/releng/de.guite.modulestudio.target</module>
-        <module>../MostProduct/bundles/de.guite.modulestudio.branding</module>
+        <module>MostProduct/releng/de.guite.modulestudio.target</module>
+        <module>MostProduct/bundles/de.guite.modulestudio.branding</module>
         <module>bundles</module>
         <module>features</module>
         <module>releng</module>
@@ -24,22 +24,22 @@
     <repositories>
         <repository>
             <id>most-dsl</id>
-            <url>file://${dsl.repository}</url>
+            <url>${dsl.repository}</url>
             <layout>p2</layout>
         </repository>
         <repository>
             <id>most-generator</id>
-            <url>file://${generator.repository}</url>
+            <url>${generator.repository}</url>
             <layout>p2</layout>
         </repository>
         <repository>
             <id>most-ui</id>
-            <url>file://${ui.repository}</url>
+            <url>${ui.repository}</url>
             <layout>p2</layout>
         </repository>
         <repository>
             <id>most-help</id>
-            <url>file://${help.repository}</url>
+            <url>${help.repository}</url>
             <layout>p2</layout>
         </repository>
     </repositories>
