dispatch downstream jobs

--- a/.github/workflows/build-component.yml
+++ b/.github/workflows/build-component.yml
@@ -50,3 +50,11 @@ jobs:
         LOCAL_DIR: deploy/repo
         REMOTE_DIR: components/locales
         ARGS: --delete --continue --ignore-time
+
+    # see https://github.com/peter-evans/repository-dispatch
+    - name: Dispatch downstream job
+      uses: peter-evans/repository-dispatch@master
+      with:
+        token: ${{ secrets.DISPATCH_TOKEN }}
+        repository: Guite/MostProduct
+        event-type: upstream-build
