limit dispatching to certain event types

--- a/.github/workflows/build-component.yml
+++ b/.github/workflows/build-component.yml
@@ -1,6 +1,10 @@
 name: Build component
 # This workflow is triggered on pushes, for pull requests and by external dispatching.
-on: [push, pull_request, repository_dispatch]
+on:
+  push:
+  pull_request:
+  repository_dispatch:
+    types: [upstream-build, manual-build]
 jobs:
   build:
     # This job runs on Linux
