updated ftp action

--- a/.github/workflows/build-translation-pack.yml
+++ b/.github/workflows/build-translation-pack.yml
@@ -50,10 +50,8 @@ jobs:
     # see https://github.com/SamKirkland/FTP-Deploy-Action
     - name: Deploy archive
       uses: SamKirkland/FTP-Deploy-Action@master
-      env:
-        FTP_SERVER: ${{ secrets.FTP_SERVER }}
-        FTP_USERNAME: ${{ secrets.FTP_USERNAME }}
-        FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
-        LOCAL_DIR: MostTranslationPack
-        REMOTE_DIR: translation-template
-        ARGS: --delete --continue --ignore-time
+      with:
+        ftp-server: ftp://${{ secrets.FTP_SERVER }}/translation-template/
+        ftp-username: ${{ secrets.FTP_USERNAME }}
+        ftp-password: ${{ secrets.FTP_PASSWORD }}
+        local-dir: MostTranslationPack
