--- a/.github/workflows/build-translation-pack.yml
+++ b/.github/workflows/build-translation-pack.yml
@@ -7,38 +7,38 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout sources from Locales repository
-      uses: actions/checkout@v2-beta
+      uses: actions/checkout@v2
       with:
         path: sources/MostLocales
 
     - name: Checkout sources from DSL repository
-      uses: actions/checkout@v2-beta
+      uses: actions/checkout@v2
       with:
         repository: Guite/MostTextual
         token: ${{ secrets.ACCESS_MOST_PRODUCT }}
         path: sources/MostTextual
 
     - name: Checkout sources from Generator repository
-      uses: actions/checkout@v2-beta
+      uses: actions/checkout@v2
       with:
         repository: Guite/MostGenerator
         path: sources/MostGenerator
 
     - name: Checkout sources from UI repository
-      uses: actions/checkout@v2-beta
+      uses: actions/checkout@v2
       with:
         repository: Guite/MostUi
         token: ${{ secrets.ACCESS_MOST_PRODUCT }}
         path: sources/MostUi
 
     - name: Checkout sources from Help repository
-      uses: actions/checkout@v2-beta
+      uses: actions/checkout@v2
       with:
         repository: Guite/MostHelp
         path: sources/MostHelp
 
     - name: Checkout sources from product repository
-      uses: actions/checkout@v2-beta
+      uses: actions/checkout@v2
       with:
         repository: Guite/MostProduct
         token: ${{ secrets.ACCESS_MOST_PRODUCT }}
@@ -55,7 +55,7 @@ jobs:
         #ftp-username: ${{ secrets.FTP_USERNAME }}
         #ftp-password: ${{ secrets.FTP_PASSWORD }}
         #local-dir: MostTranslationPack
-      uses: SamKirkland/FTP-Deploy-Action@v2
+      uses: SamKirkland/FTP-Deploy-Action@2.0.0
       env:
         ftp-server: ftp://${{ secrets.FTP_SERVER }}/translation-template/
         ftp-username: ${{ secrets.FTP_USERNAME }}
