--- a/releng/de.guite.modulestudio.locales.build/pom.xml
+++ b/releng/de.guite.modulestudio.locales.build/pom.xml
@@ -6,9 +6,8 @@
 
     <parent>
         <groupId>de.guite.modulestudio.locales</groupId>
-        <artifactId>releng</artifactId>
+        <artifactId>de.guite.modulestudio.locales.releng</artifactId>
         <version>1.4.0-SNAPSHOT</version>
-        <relativePath>../pom.tycho</relativePath>
     </parent>
 
     <build>
