update ftp deploy action usage

--- a/.github/workflows/build-translation-pack.yml
+++ b/.github/workflows/build-translation-pack.yml
@@ -49,17 +49,11 @@ jobs:
 
     # see https://github.com/SamKirkland/FTP-Deploy-Action
     - name: Deploy archive
-      #uses: SamKirkland/FTP-Deploy-Action@master
-      #with:
-        #ftp-server: ftp://${{ secrets.FTP_SERVER }}/translation-template/
-        #ftp-username: ${{ secrets.FTP_USERNAME }}
-        #ftp-password: ${{ secrets.FTP_PASSWORD }}
-        #local-dir: MostTranslationPack
-      uses: SamKirkland/FTP-Deploy-Action@2.0.0
-      env:
-        FTP_SERVER: ${{ secrets.FTP_SERVER }}
-        FTP_USERNAME: ${{ secrets.FTP_USERNAME }}
-        FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
-        LOCAL_DIR: MostTranslationPack
-        REMOTE_DIR: translation-template
-        ARGS: --delete --continue --continue
+      uses: SamKirkland/FTP-Deploy-Action@master
+      with:
+        server: ${{ secrets.FTP_SERVER }}
+        username: ${{ secrets.FTP_USERNAME }}
+        password: ${{ secrets.FTP_PASSWORD }}
+        local-dir: MostTranslationPack/
+        server-dir: translation-template/
+        dangerous-clean-slate: true
