provide required java distribution argument

--- a/.github/workflows/build-component.yml
+++ b/.github/workflows/build-component.yml
@@ -22,6 +22,7 @@ jobs:
     - name: Setup JDK
       uses: actions/setup-java@master
       with:
+        distribution: 'adopt'
         java-version: 11
 
     - name: Cache Maven packages
